# DA

./: .gitmodules  apontamentos_exame.docx
DA_TP_Classes/TP1/: ex1.cpp
W1/: 01.TCA1.greedy.pptx
W1/Pratica1/TP1/: ex3.cpp
W2/Pratica2/Parte1/: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  exercises.h
W3/TP3/: CMakeLists.txt  ex1.cpp  ex2.cpp
W3/TP3/lib/googletest-master/docs/: primer.md
W3/TP3/lib/googletest-master/googlemock/: CMakeLists.txt
W3/TP3/lib/googletest-master/googletest/: CMakeLists.txt
W5/: CMakeLists.txt  main.cpp
W5/Ex1/: Ex1.cpp  Graph.h
W7/: CMakeLists.txt  main.cpp
exame/: CMakeLists.txt
preparacaoExame/: CMakeLists.txt
preparacaoExame/TP1/: ex2.cpp  ex3.cpp  ex4.cpp  ex6.cpp
preparacaoExame/TP2/TP2a/: ex1.cpp  ex2.cpp  exercises.h
preparacaoExame/TP2a/: ex1.cpp
preparacaoExame/TP3/TP3a/: ex2.cpp
preparacaoExame/exame/: main.cpp
